0029230: Foundation Classes - provide move constructors for basic collections

OCCT_NO_RVALUE_REFERENCE - added new macros disabling
move constructors on obsolete compilers.

NCollection_Array1 - added method Exchange().

NCollection_Array2 - added methods Resize(), Move(), Exchange()
and move constructor + operator.

NCollection_Map, NCollection_DataMap, NCollection_DoubleMap,
NCollection_IndexedDataMap, NCollection_IndexedMap - added
method Move() and move constructor + operator.

NCollection_Sequence, NCollection_Vector, NCollection_List,
TCollection_AsciiString, TCollection_ExtendedString,
NCollection_UtfString - added methods
Move(), Exchange() and move constructor + operator.

NCollection_SparseArray - added method Move().